--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
   <section class="container mx-auto px-4 py-16" id="About">
    <div class="flex flex-col md:flex-row items-center">
     <div class="md:w-1/2">
-     <img alt="Portrait of Dinesh Padhan" class="rounded-full w-64 h-64 mx-auto md:mx-0 fade-in" height="549" id="about-image" src="https://static.wixstatic.com/media/53bc72_d59dc54380f644e2a0a19ca7b27e26a9~mv2.jpg/v1/crop/x_0,y_177,w_1063,h_1063/fill/w_549,h_549,al_c,q_80,usm_0.66_1.00_0.01,enc_avif,quality_auto/20240406_101855_edited.jpg" width="549"/>
+     <img alt="Portrait of Dinesh Padhan" class="rounded-full w-80 h-80 mx-auto md:mx-0 fade-in" height="549" style="margin: auto;" id="about-image" src="https://static.wixstatic.com/media/53bc72_d59dc54380f644e2a0a19ca7b27e26a9~mv2.jpg/v1/crop/x_0,y_177,w_1063,h_1063/fill/w_549,h_549,al_c,q_80,usm_0.66_1.00_0.01,enc_avif,quality_auto/20240406_101855_edited.jpg" width="549"/>
     </div>
     <div class="md:w-1/2 mt-8 md:mt-0 md:pl-16">
      <h2 class="text-3xl font-bold mb-4 text-black">
